[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/Shop HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/Death Page.tscn" type="PackedScene" id=4]
[ext_resource path="res://Map/Outdoor Map.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="PAGES" type="CanvasLayer" parent="."]
pause_mode = 2
editor/display_folded = true

[node name="HUD" parent="PAGES" instance=ExtResource( 2 )]
editor/display_folded = true

[node name="Health Bar" parent="PAGES/HUD/Center Bot/Player Stats" index="0"]
editor/display_folded = false

[node name="Shop HUD" parent="PAGES" instance=ExtResource( 3 )]
editor/display_folded = true
layer = 0

[node name="Death Page" parent="PAGES" instance=ExtResource( 4 )]

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="Outdoor Map" parent="." instance=ExtResource( 5 )]

[node name="DeathTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 3.0
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="Dead" from="Outdoor Map/Bushes/Player" to="." method="_on_Player_Dead"]
[connection signal="Gold_Changed" from="Outdoor Map/Bushes/Player" to="PAGES/HUD" method="_on_Player_Gold_Changed"]
[connection signal="Health_Changed" from="Outdoor Map/Bushes/Player" to="PAGES/HUD" method="_on_Player_Health_Changed"]
[connection signal="Stamina_Changed" from="Outdoor Map/Bushes/Player" to="PAGES/HUD" method="_on_Player_Stamina_Changed"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[editable path="PAGES/HUD"]

[editable path="PAGES/Shop HUD"]

[editable path="Outdoor Map"]
